--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,4 +1,10 @@
 <article class="single article-{{ .Source.Path | md5 }}">
+	{{ if ".Params.thumbnail" "!=" nil }}
+		<style amp-custom>
+			.article-{{ .Source.Path | md5   }} .thumbnail{ background-image: url({{ .Params.thumbnail   }});  }
+		</style>
+
+	{{ end }}
   <header class="article-header">
     <div class="clearfix content-inner">
 
